feat: generate & move code to top-bar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
+<app-top-bar></app-top-bar>
 <h1>Pensum App</h1>
-<nav>
-  <ul>
-    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/semester" routerLinkActive="active">Semester</a></li>
-  </ul>
-</nav>
 <router-outlet></router-outlet>
