--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,37 +3,34 @@
 
   <table mat-table [dataSource]="semester.subjects" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-    <!-- Position Column -->
+    <!-- Code Column -->
     <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+      <th mat-header-cell *matHeaderCellDef>Code</th>
+      <td mat-cell *matCellDef="let element">{{element.code}}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{element.name}}</td>
     </ng-container>
 
-    <!-- Weight Column -->
+    <!-- Score Column -->
     <ng-container matColumnDef="score">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.score}} </td>
+      <th mat-header-cell *matHeaderCellDef>Score</th>
+      <td mat-cell *matCellDef="let element">{{element.score}}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- State Column -->
     <ng-container matColumnDef="state">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.state}} </td>
+      <th mat-header-cell *matHeaderCellDef>State</th>
+      <td mat-cell *matCellDef="let element">{{element.state}}</td>
     </ng-container>
 
-    <!-- Symbol Column -->
+    <!-- Prerequisite Column -->
     <ng-container matColumnDef="prerequisite">
-      <th mat-header-cell *matHeaderCellDef> Symbol </th>
-      <td mat-cell *matCellDef="let element"> {{element.prerequisite}} </td>
+      <th mat-header-cell *matHeaderCellDef>Prerequisite</th>
+      <td mat-cell *matCellDef="let element">{{element.prerequisite}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
