feat(top-bar): implement initial template

--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -1,6 +1,9 @@
 <nav>
-  <ul>
-    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/semester/1" routerLinkActive="active">Semester</a></li>
-  </ul>
+  <p>Pensum App</p>
+  <a routerLink="/home">
+    <mat-icon
+      fontIcon="home"
+    ></mat-icon>
+    Home
+  </a>
 </nav>
