--- a/src/app/components/semester/semester.component.html
+++ b/src/app/components/semester/semester.component.html
@@ -1,1 +1,38 @@
-<p>semester works!</p>
+<div class="semester-container">
+  <h3>Semester {{ semester.num }}</h3>
+
+  <table mat-table [dataSource]="semester.subjects" class="mat-elevation-z8">
+    <!-- Code Column -->
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef>Code</th>
+      <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <!-- Score Column -->
+    <ng-container matColumnDef="score">
+      <th mat-header-cell *matHeaderCellDef>Score</th>
+      <td mat-cell *matCellDef="let element">{{ element.score }}</td>
+    </ng-container>
+
+    <!-- State Column -->
+    <ng-container matColumnDef="state">
+      <th mat-header-cell *matHeaderCellDef>State</th>
+      <td mat-cell *matCellDef="let element">{{ element.state }}</td>
+    </ng-container>
+
+    <!-- Prerequisite Column -->
+    <ng-container matColumnDef="prerequisite">
+      <th mat-header-cell *matHeaderCellDef>Prerequisite</th>
+      <td mat-cell *matCellDef="let element">{{ element.prerequisite }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
