--- a/src/app/components/semester/semester.component.html
+++ b/src/app/components/semester/semester.component.html
@@ -1,5 +1,8 @@
 <div class="semester-container">
   <h3>Semester {{ semester.num }}</h3>
+  <button mat-raised-button color="primary" (click)="addSubject()">
+    Add Subject
+  </button>
 
   <table mat-table [dataSource]="semester.subjects" class="mat-elevation-z8">
     <!-- Code Column -->
