feat: implement pensum-table component

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,3 +5,5 @@
 <ng-container *ngFor="let semester of $semesters | async">
   <app-semester [semester]="semester"></app-semester>
 </ng-container>
+
+<app-pensum-table />
