feat(home): update home component to create a pensum

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,16 @@
 <h1>Pensum Tracker</h1>
+
 <section class="buttons">
-  <button mat-raised-button (click)="openCreateSubjectDialog()">Add Subject</button>
+  <button mat-raised-button color="primary" (click)="openCreatePensumDialog()">
+    Add Pensum
+  </button>
+  <button mat-raised-button color="primary" (click)="openCreateSubjectDialog()">
+    Add Subject
+  </button>
 </section>
+
 <ng-container *ngFor="let semester of $semesters | async">
   <app-semester [semester]="semester"></app-semester>
 </ng-container>
 
-<app-pensum-table />
+<app-pensum-table/>
