--- a/src/app/components/create-subject/create-subject.component.html
+++ b/src/app/components/create-subject/create-subject.component.html
@@ -1,19 +1,12 @@
 <h3 mat-dialog-title>Add Subject</h3>
 <mat-dialog-content>
   <form [formGroup]="subjectForm">
-    <!-- code -->
-    <p>
-      <mat-form-field appearance="outline">
-        <mat-label>Code</mat-label>
-        <input matInput placeholder="CAL-115" formControlName="code" />
-      </mat-form-field>
-    </p>
 
     <!-- name -->
     <p>
       <mat-form-field appearance="outline">
         <mat-label>Name</mat-label>
-        <input matInput placeholder="Calculo I" formControlName="name" />
+        <input matInput placeholder="Calculo I" formControlName="name"/>
       </mat-form-field>
     </p>
 
@@ -22,8 +15,10 @@
       <mat-form-field appearance="outline">
         <mat-label>State</mat-label>
         <mat-select formControlName="state">
-          <mat-option *ngFor="let option of ['Approved', 'Reproved', 'In progress']" value="option">{{ option
-            }}</mat-option>
+          <mat-option *ngFor="let option of subjectStates" value="option">{{
+              option
+            }}
+          </mat-option>
         </mat-select>
       </mat-form-field>
     </p>
@@ -32,15 +27,7 @@
     <p>
       <mat-form-field appearance="outline">
         <mat-label>Score</mat-label>
-        <input class="score-input" type="number" matInput placeholder="50" formControlName="score" />
-      </mat-form-field>
-    </p>
-
-    <!-- prerequisite -->
-    <p>
-      <mat-form-field appearance="outline">
-        <mat-label>Prerequisite</mat-label>
-        <input matInput placeholder="CAL-115" formControlName="prerequisite" />
+        <input class="score-input" type="number" matInput placeholder="50" formControlName="score"/>
       </mat-form-field>
     </p>
 
@@ -49,7 +36,9 @@
       <mat-form-field appearance="outline">
         <mat-label>Semester</mat-label>
         <mat-select formControlName="semester">
-          <mat-option *ngFor="let option of [1, 2, 3, 4, 5, 6, 7, 8]" value="option">{{ option }}</mat-option>
+          @for (option of [1, 2, 3, 4, 5, 6, 7, 8]; track option) {
+            <mat-option value="option">{{ option }}</mat-option>
+          }
         </mat-select>
       </mat-form-field>
     </p>
